# dsw-document-template-tool

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  readme.md
.github/dsw/: docker-compose.yml
.github/workflows/: docs_pages.yml  headless_render_regression.yml  pages.yml
config/: dsw-compat.yml  regression-evidence.yml  regression.ci.yml  regression.document.yml  regression.preview.yml  requirements.txt  ruff.toml
docs/: README.md  architecture.md  ci-and-release-runbook.md  command-reference.md  conf.py  configuration-reference.md  development-guidelines.md  downstream-integration.md  downstream-translation-repo.md  index.md  internal-change-guide.md  maintenance.md  operator-quickstart.md  parser-and-translation-tree.md  qa-checklist.md  regression-workflow.md  security-and-permissions.md  translation-repository-templates.md  translation-workflow.md  troubleshooting.md  version-upgrade-runbook.md
docs/api/: migration-and-config.rst  render-and-regression.rst  template-transform.rst  translation-tree.rst
docs/compatibility/: dsw-compatibility-probe.md
examples/github-actions/: document_template_translation_sync.yml  weblate_translation_promote.yml
examples/translation-repository/: .gitignore  README.md
fixtures/: README.md
outputs/project-render/: test-project.pdf.json
scripts/ci/: _weblate_xliff_merge.py  align_weblate_review_branch.py  check_translation_migration_status.py  (+32 more)
src/: render_project.py  render_regression.py  transform_template.py  translation_tree.py
tests/: conftest.py
workspace/: README.md
(+356 files in other folders)
